--- a/CSS/index.css
+++ b/CSS/index.css
@@ -89,5 +89,6 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
-    background-size: 100%;
+    background-size: cover;
+    
 }
